<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="@dimen/min_width_dob_dialog"
        android:minHeight="@dimen/min_height_dob_dialog"
        android:orientation="vertical"
        android:background="@color/color_surface"
        android:padding="@dimen/padding_extra_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:text="@string/page_title_verify_pan_dob"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_large">

            <ImageView
                android:id="@+id/fingerprint_icon"
                android:layout_width="@dimen/fingerprint_image_dimension"
                android:layout_height="@dimen/fingerprint_image_dimension"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_fingerprint" />

            <TextView
                android:id="@+id/fingerprint_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_medium"
                android:gravity="center"
                android:text="@string/text_fingerprint_hint"
                android:padding="@dimen/padding_medium" />

            <TextView
                android:id="@+id/txtOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:text="@string/text_label_OR"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/password_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_medium"
                android:paddingBottom="@dimen/padding_medium"
                android:text="@string/prompt_message_enter_pan_dob"
                android:textSize="@dimen/text_size_normal" />


            <EditText
                android:id="@+id/ed_pan_dob"
                android:theme="@style/Widget.MoslTheme.EditText.NumberInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/"
                android:imeOptions="actionDone"
                android:inputType="text|textCapCharacters"
                android:maxLength="10"
                android:ems="10"
                android:paddingTop="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_large"
                android:hint="@string/hint_text_enter_your_pan"
                android:textSize="@dimen/text_size_normal" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/progress_bar_dimension"
                android:layout_height="@dimen/progress_bar_dimension"
                android:layout_gravity="center_horizontal"
                android:indeterminateOnly="true"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/inputValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingTop="@dimen/padding_medium"
                android:paddingBottom="@dimen/padding_medium"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/color_error"
                android:visibility="gone"
                tools:text="Invalid PAN / DOB"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/widget.MoslTheme.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_label_cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/second_dialog_button"
                style="@style/widget.MoslTheme.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_continue" />
        </LinearLayout>
    </LinearLayout>
</layout>