<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSurface">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_password_label"
                    style="@style/Widget.MoslTheme.HeaderText.Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="@dimen/padding_large"
                    android:paddingBottom="@dimen/padding_large"
                    android:text="@string/text_label_change_password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtUsrId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MoslTheme.EditText.Normal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usrId_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_hint_customer_login"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_oldPwd_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MoslTheme.EditText.Normal"
                    app:passwordToggleDrawable="@drawable/selector_password_toggle"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/color_primary"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/oldPwd_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/login_password_digits"
                        android:fontFamily="sans-serif"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword|textNoSuggestions"
                        android:maxLength="10"
                        android:maxLines="1">

                        <requestFocus />
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MoslTheme.EditText.Normal"
                    app:passwordToggleDrawable="@drawable/selector_password_toggle"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/color_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newPwd_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/login_password_digits"
                        android:fontFamily="sans-serif"
                        android:hint="@string/hint_change_password_new_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword|textNoSuggestions"
                        android:maxLength="10"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.MoslTheme.EditText.Normal"
                    app:passwordToggleDrawable="@drawable/selector_password_toggle"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/color_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPwd_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/login_password_digits"
                        android:fontFamily="sans-serif"
                        android:hint="@string/hint_confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword|textNoSuggestions"
                        android:maxLength="10"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/updateBtn"
                    style="@style/Widget.MoslTheme.SecondaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:minHeight="@dimen/min_height_button_update"
                    android:text="@string/button_change_password"
                    android:textSize="@dimen/text_size_normal"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtPasswordPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:text="@string/lbl_password_policy"
                    android:textSize="@dimen/text_size_normal" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="visible" />
        </FrameLayout>
    </ScrollView>
</layout>